QHBWEB-209 : Ajout Widget Origine et impact des tirs

--- a/src/app/components/directives/sandbox/teamStats/teamStats.html
+++ b/src/app/components/directives/sandbox/teamStats/teamStats.html
@@ -1,6 +1,6 @@
 <filter-calendar meta="meta"></filter-calendar>
 
-
+<goal-heat-map meta="meta" owners-id="ownersId" datas="assets/heatmap.json"></goal-heat-map>
 <div class="container" ng-cloack>     
             
     <!-- Stats goals/sanction/use start -->
