--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1824,3 +1824,26 @@ span#top {
 .stores img {
     width: 14rem;
 }
+
+.heatmap-container {
+    width: 100%;
+    position: relative;
+}
+
+.heatmap-image {
+    left:50%;
+    top:50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    position:absolute;
+}
+
+.heatmap {
+    left:50%;
+    top:50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    position:absolute;
+}
