--- a/src/app/modules/sandbox/stats/event/eventStats.html
+++ b/src/app/modules/sandbox/stats/event/eventStats.html
@@ -161,6 +161,7 @@
                             <th data-field="player" translate="stats.eventLabels.player"></th>
                             <th class="center-align" data-field="holder" translate="stats.eventLabels.holder"></th>
                             <th class="center-align" data-field="holder" translate="stats.eventLabels.playTime"></th>
+                            <th class="center-align" data-field="holder" translate="stats.eventLabels.note"></th>
                             <th class="center-align" data-field="efficiency" translate="stats.eventLabels.efficiency"></th>
                             <th class="center-align" data-field="yellowCard" translate="stats.eventLabels.sanction"></th>
                             <th class="center-align" data-field="attack" translate="stats.eventLabels.attack"></th>
@@ -172,6 +173,7 @@
                             <td><a href="#/private/viewPlayer/{{player._id}}" class="accent-text-color">{{player.name}} {{player.firstname}}</a></td>
                             <td class="center-align"><span ng-if="player.stats.holder>0"><i class="fa fa-star-o"></i></span></td>
                             <td class="center-align"><span ng-if="player.stats.totalPlayTime>0">{{player.stats.totalPlayTime/60 | number : 0}} '</span></td>
+                            <td class="center-align"><span ng-if="player.stats.totalPlayTime>0">{{player.stats.goalScored - (player.stats.originShootAtt-player.stats.goalScored) + player.stats.actAttPos + player.stats.actDefPos - player.stats.actAttNeg - player.stats.actDefNeg}}</span></td>
                             <td class="center-align">
                                 <span ng-if="player.stats.originShootAtt > 0">{{player.stats.goalScored}} / {{player.stats.originShootAtt}} <span class="light-text-color">({{(player.stats.goalScored/player.stats.originShootAtt)*100 | number : 0}} %)</span></span>
                             </td>
@@ -195,6 +197,7 @@
                             <th data-field="player" translate="stats.eventLabels.player"></th>
                             <th class="center-align" data-field="holder" translate="stats.eventLabels.holder"></th>
                             <th class="center-align" data-field="holder" translate="stats.eventLabels.playTime"></th>
+                            <th class="center-align" data-field="holder" translate="stats.eventLabels.note"></th>
                             <th class="center-align" data-field="efficiency" translate="stats.eventLabels.efficiencyGoal"></th>
                             <th class="center-align" data-field="yellowCard" translate="stats.eventLabels.sanction"></th>
                             <th class="center-align" data-field="attack" translate="stats.eventLabels.attack"></th>
@@ -206,6 +209,7 @@
                             <td><a href="#/private/viewPlayer/{{player._id}}" class="accent-text-color">{{player.name}} {{player.firstname}}</a></td>
                             <td class="center-align"><span ng-if="player.stats.holder>0"><i class="fa fa-star-o"></i></span></td>
                             <td class="center-align"><span ng-if="player.stats.totalPlayTime>0">{{player.stats.totalPlayTime/60 | number : 0}} '</span></td>
+                            <td class="center-align"><span ng-if="player.stats.totalPlayTime>0">{{player.stats.note}}</span></td>
                             <td class="center-align">
                                 <span ng-if="player.stats.originShootDef > 0">{{player.stats.originShootDef-player.stats.goalConceded}} / {{player.stats.originShootDef}} <span class="light-text-color">
                                     ({{((player.stats.originShootDef-player.stats.goalConceded)/player.stats.originShootDef)*100 | number : 0}} %)</span></span>
