--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1831,19 +1831,23 @@ span#top {
 }
 
 .heatmap-image {
-    left:50%;
-    top:50%;
+    left: 50%;
+    top: 50%;
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    position:absolute;
+    position: absolute;
+}
+
+.heatmap-image.transparent {
+    opacity: 0;
 }
 
 .heatmap {
-    left:50%;
-    top:50%;
+    left: 50%;
+    top: 50%;
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    position:absolute;
+    position: absolute;
 }
