--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1851,12 +1851,30 @@ span#top {
     transform: translate(-50%, -50%);
     position: absolute;
 }
-#tooltip-span {
-    display:none;
-    background-color: #0a0a0a;
-    color: #ffffff;
-    width: 100px;
-    height: 20px;
+
+.tooltip-span {
+    visibility: hidden;
+    width: 50px;
+    height: 30px;
     z-index: 99;
-    position:fixed;
+    position: absolute;
+    background-color: #37474F;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    bottom: 125%;
+    left: 50%;
+    font-weight: bold;
+}
+
+.tooltip-span::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    z-index: 99;
+    border: 5px solid transparent;
+    border-top-color: #555;
 }
