QHBWEB-209 : Ajout Widget Origine et impact des tirs

--- a/src/app/components/directives/sandbox/playerStats/playerStats.html
+++ b/src/app/components/directives/sandbox/playerStats/playerStats.html
@@ -1,5 +1,7 @@
 <filter-calendar meta="meta"></filter-calendar>
-
+<goal-heat-map meta="meta" owners-id="ownersId" datas="assets/heatmap.json"
+               start-date="periodicityActive.startDate" end-date="periodicityActive.endDate" instance="instance"
+></goal-heat-map>
 <!-- Stats goals/sanction/use start -->
 <div class="row">
 
