--- a/src/app/modules/sandbox/stats/event/eventStats.html
+++ b/src/app/modules/sandbox/stats/event/eventStats.html
@@ -162,10 +162,10 @@
                         <tr class="light-primary-color">
                             <th data-field="player" translate="stats.eventLabels.player"></th>
                             <th class="center-align" data-field="holder" translate="stats.eventLabels.holder"></th>
-                            <th class="center-align" data-field="holder" translate="stats.eventLabels.playTime"></th>
-                            <th class="center-align" data-field="holder" translate="stats.eventLabels.note"></th>
+                            <th class="center-align" data-field="playTime" translate="stats.eventLabels.playTime"></th>
+                            <th class="center-align" data-field="note" translate="stats.eventLabels.note"></th>
                             <th class="center-align" data-field="efficiency" translate="stats.eventLabels.efficiency"></th>
-                            <th class="center-align" data-field="yellowCard" translate="stats.eventLabels.sanction"></th>
+                            <th class="center-align" data-field="sanction" translate="stats.eventLabels.sanction"></th>
                             <th class="center-align" data-field="attack" translate="stats.eventLabels.attack"></th>
                             <th class="center-align" data-field="defense" translate="stats.eventLabels.defense"></th>
                         </tr>
@@ -196,12 +196,12 @@
                     <table class="bordered responsive-table highlight">
                         <thead>
                         <tr class="light-primary-color">
-                            <th data-field="player" translate="stats.eventLabels.player"></th>
+                            <th data-field="player" translate="stats.eventLabels.goalkeeper"></th>
                             <th class="center-align" data-field="holder" translate="stats.eventLabels.holder"></th>
-                            <th class="center-align" data-field="holder" translate="stats.eventLabels.playTime"></th>
-                            <th class="center-align" data-field="holder" translate="stats.eventLabels.note"></th>
+                            <th class="center-align" data-field="playTime" translate="stats.eventLabels.playTime"></th>
+                            <th class="center-align" data-field="note" translate="stats.eventLabels.note"></th>
                             <th class="center-align" data-field="efficiency" translate="stats.eventLabels.efficiencyGoal"></th>
-                            <th class="center-align" data-field="yellowCard" translate="stats.eventLabels.sanction"></th>
+                            <th class="center-align" data-field="sanction" translate="stats.eventLabels.sanction"></th>
                             <th class="center-align" data-field="attack" translate="stats.eventLabels.attack"></th>
                             <th class="center-align" data-field="defense" translate="stats.eventLabels.defense"></th>
                         </tr>
