fixes QHBWEB-215 : Deep linking mobile

--- a/src/app/modules/commons/users/signup/signupEndDone.html
+++ b/src/app/modules/commons/users/signup/signupEndDone.html
@@ -28,7 +28,7 @@
             </div>
             <div class="row">
                 <div class="center col s12">
-                    <a href="#/private/" class="btn white-text accent-color"
+                    <a href="getLink()" class="btn white-text accent-color"
                        translate="signupStartDonePage.buttonHome"></a>
                 </div>
             </div>
