--- a/src/app/components/directives/sandbox/teamStats/teamStats.html
+++ b/src/app/components/directives/sandbox/teamStats/teamStats.html
@@ -1,8 +1,5 @@
 <filter-calendar meta="meta"></filter-calendar>
 
-<goal-heat-map meta="meta" owners-id="ownersId" datas="assets/heatmap.json"
-start-date="periodicityActive.startDate" end-date="periodicityActive.endDate" instance="instance"
-></goal-heat-map>
 <div class="container" ng-cloack>
 
     <!-- Stats goals/sanction/use start -->
@@ -27,6 +24,10 @@ start-date="periodicityActive.startDate" end-date="periodicityActive.endDate" in
         </div>
     </div>
     <!-- Stats goals/sanction/use end -->
+    
+    <goal-heat-map meta="meta" owners-id="ownersId" datas="assets/heatmap.json"
+    start-date="periodicityActive.startDate" end-date="periodicityActive.endDate" instance="instance"
+    is-team="true"></goal-heat-map>
 
 
     <!-- Stats shoot efficiency Start -->
