--- a/src/app/components/directives/stats/hand/goalHeatMap/goalHeatMap.html
+++ b/src/app/components/directives/stats/hand/goalHeatMap/goalHeatMap.html
@@ -4,7 +4,7 @@
     </div>
     <div class="card-content white primary-text-color">
         <div class="row">
-            <div class="col s12 m8">
+            <div class="col s12 align-center">
                 <div class="heatmap-container" style="height:{{heightGoal}}px;" id="goal">
                     <span id="goalTooltip" class="tooltip-span">{{val.goal}}</span>
                     <img class="heatmap-image" src="assets/images/handball/hand_goal.png"
@@ -46,29 +46,29 @@
                 </div>
 
             </div>
-            <div class="col s12 m4">
-                <p>
+        </div>
+        <div class="row" ng-if="isTeam">
+            <div class="col s12 center">
                     <input name="group1" type="radio" id="myTeam" ng-model="indicator" ng-change="buildAll()"
                            ng-checked="(indicator.impactShoot === 'impactShootAtt')"
                            ng-value="{impactShoot : 'impactShootAtt', stopGK : 'stopGKAtt',originShoot : 'originShootAtt', goalType:'goalScored'}"
                     />
                     <label for="myTeam" translate="stats.myteam"></label>
-                </p>
-                <p>
+                
                     <input name="group1" type="radio" id="adverssary" ng-model="indicator" ng-change="buildAll()"
                            ng-checked="(indicator.impactShoot === 'impactShootDef')"
                            ng-value="{impactShoot : 'impactShootDef', stopGK : 'stopGKDef',originShoot : 'originShootDef', goalType:'goalConceded'}"
                     />
                     <label for="adverssary" translate="stats.adversary"></label>
-                </p>
-                <p>
-                    <input type="checkbox" id="succeeded" ng-model="succeededGoals" ng-click="buildAll()"/>
+            </div>
+        </div>    
+        <div class="row">
+            <div class="col s12 center">
+                    <input type="checkbox" class="filled-in" id="succeeded" ng-model="succeededGoals" ng-click="buildAll()"/>
                     <label for="succeeded" translate="stats.label.goalScored"></label>
-                </p>
-                <p>
-                    <input type="checkbox" id="stoped" ng-model="stopedGoals" ng-click="buildAll()"/>
+                
+                    <input type="checkbox" class="filled-in" id="stoped" ng-model="stopedGoals" ng-click="buildAll()"/>
                     <label for="stoped" translate="stats.label.stopOk"></label>
-                </p>
             </div>
         </div>
     </div>
