--- a/src/app/index.css
+++ b/src/app/index.css
@@ -14,6 +14,7 @@ body {
 main {
     flex: 1 0 auto;
 }
+
 .container-full {
     width: 100vw;
     margin-left: 0 !important;
@@ -23,6 +24,8 @@ main {
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak, .translate-cloak {
     display: none !important;
+    visibility: hidden !important;
+    max-height: 0 !important;
 }
 
 .material-icons.md-9 {
@@ -1876,4 +1879,19 @@ span#top {
     z-index: 99;
     border: 5px solid transparent;
     border-top-color: #555;
+}
+
+.card-form .prefix {
+    font-size: 1rem;
+    width: 1rem;
+    padding-top: 1rem;
+}
+
+.card-form .input-field .prefix ~ input,
+.card-form .input-field .prefix ~ textarea,
+.card-form .input-field .prefix ~ label,
+.card-form .input-field .prefix ~ .validate ~ label,
+.card-form .input-field .prefix ~ .autocomplete-content {
+    margin-left: 1.5rem;
+    width: calc(100% - 1rem);
 }
